--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-modal": "^3.16.3",
+    "react-toastify": "^11.0.5",
     "react-use": "^17.5.1",
     "react-watermark": "^0.0.3",
     "sass": "^1.83.4",
@@ -69,6 +70,7 @@
     "@types/node": "^20",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18",
+    "@types/react-toastify": "^4.0.2",
     "autoprefixer": "^10.4.20",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^8",
